tests/fixtures/invalid/pow_set_set_int.py
# Cannot call pow() with Set[int], Set[int], Int
x = pow({1, 2, 3}, {1, 2, 3}, 1)
